--- a/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
+++ b/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
@@ -14,6 +14,7 @@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <style>
+   
     body {
         padding: 0 0 0 4rem !important;
     }
@@ -134,11 +135,11 @@
                 <div id="filters">
                     <div class="row" onchange="datefilter()">
 
-                        <div class="col-sm">
+                        <div class="col">
                             <label for="baslagictarihi">Başlagıç Tarihi:</label>
                             <input class="form-control" style="width: 15vw;height:32px" type="date" id="baslangictarihi" name="BASLANGIC_TARIH" value=" " placeholder="Başlangıç Tarihi">
                         </div>
-                        <div class="col-sm">
+                        <div class="col">
                             <label for="bitistarihi">Bitiş Tarihi:</label>
                             <input class="form-control" style="width: 15vw;height:32px" type="date" id="bitistarihi" name="BASLANGIC_TARIH" value=" " placeholder="Bitiş Tarihi">
                         </div>
@@ -239,7 +240,7 @@
                        data-filter-control="true"
                        data-filter-control-multiple-search="true"
                        data-loading-template="loadingTemplate"
-                       data-height="700"
+                       data-height="650"
                        data-mobile-responsive="true"
                        data-show-footer="true"
                        data-detail-view="false"
