--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -17,11 +17,30 @@
             border-radius: 50%;
             display: inline-block;
         }
-        ::-webkit-scrollbar {
-            width: 2px;
+        #navbar ::-webkit-scrollbar {
+            width: 2px !important;
         }
-        
 
+        .fixed-table-body ::-webkit-scrollbar {
+            width: 20px !important;
+        }
+
+        /* Track */
+        .fixed-table-body ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey !important;
+            border-radius: 10px !important;
+        }
+
+        /* Handle */
+        .fixed-table-body ::-webkit-scrollbar-thumb {
+            background: red !important;
+            border-radius: 10px !important;
+        }
+
+            /* Handle on hover */
+            .fixed-table-body ::-webkit-scrollbar-thumb:hover {
+                background: #b30000 !important;
+            }
         /*========== VARIABLES CSS ==========*/
         :root {
             --nav-width: 250px;
