Hurda ve 2. kalite transfer sayfası eklendi.

--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -64,7 +64,7 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
 
-            <div id="divPartial" style="display:none">
+            <div id="divPartial">
                 @Html.Partial("_Layout_menu")
             </div>
             <div id="divPartial2" style="display:none">
