--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -538,6 +538,7 @@
                                         <a href="@Url.Action("IsEmri", "IsEmri")" id="isemri2" style="cursor: pointer; display: @ViewBag.DisplayIsEmriKayit" class="nav__dropdown-item">• İş Emri</a>
                                         <a href="@Url.Action("Index", "Uretim")" id="anlikuretim1" style="cursor:pointer;display:  @ViewBag.DisplayAnlikUretim" class="nav__dropdown-item">• Üretim Kayıtları</a>
                                         <a href="@Url.Action("MES", "Uretim")" id="mes" style="cursor:pointer;display:  @ViewBag.DisplayMES" class="nav__dropdown-item">• MES</a>
+                                        <a href="@Url.Action("HurdaVeIkinciKaliteTransfer", "Uretim")" id="mes" style="cursor:pointer;display:  @ViewBag.DisplayMES" class="nav__dropdown-item">• Hurda & 2. Kalite Transfer</a>
                                     </div>
                                 </div>
                             </div>
