--- a/NOVA/Views/Uretim/HurdaVeIkinciKaliteTransfer.cshtml
+++ b/NOVA/Views/Uretim/HurdaVeIkinciKaliteTransfer.cshtml
@@ -77,7 +77,7 @@
     <div class="col-12">
         <div class="table-responsive">
             <div id="transfer-table-toolbar">
-                <button id="transfer-button" class="btn btn-outline-primary" style="display:none;">HURDAYA AKTAR</button>
+                <button id="transfer-button" class="btn btn-outline-primary" style="display:none;" onclick="TransferButtonAction()">HURDAYA AKTAR</button>
             </div>
 
             <table id="transfer-table"
@@ -124,8 +124,8 @@
     function ChangeType() {
         SelectedValues = [];
 
-        FetchDataFromUrl();
         TransferButtonVisibility();
+        FetchDataFromUrl();
     }
 
     function ValueIsSelected(Value) {
@@ -155,15 +155,6 @@
             }
         }
     }
-
-    function TransferButtonVisibility() {
-        if (SelectedValues.length > 0) {
-            $('#transfer-button').show();
-        }
-        else {
-            $('#transfer-button').hide();
-        }
-    }
 </script>
 
 <script>
@@ -191,6 +182,10 @@
 
                     $('#transfer-table').bootstrapTable("destroy");
                     $('#transfer-table').bootstrapTable({ data: GroupByWithSum(response) });
+                }
+                else{
+                    $('#transfer-table').bootstrapTable("destroy");
+                    $('#transfer-table').bootstrapTable({ data: [] });
                 }
             }
         })
@@ -233,7 +228,8 @@
 
         if (ValuesIsSelected(Value))
         {
-            SelectedValues = SelectedValues.filter(item => FilteredData.indexOf(element => element.SERI_NO == item.SERI_NO) > 0);
+            var MappedData = FilteredData.map((item) => { return item.SERI_NO});
+            SelectedValues = SelectedValues.filter(x => !MappedData.includes(x));
 
             Icon.style.color = 'red';
             Icon.classList.remove("bi-check-circle-fill");
@@ -318,5 +314,58 @@
         }
 
         TransferButtonVisibility();
+    }
+</script>
+
+<script>
+    function TransferButtonVisibility() {
+        if (SelectedValues.length > 0) {
+            $('#transfer-button').show();
+        }
+        else {
+            $('#transfer-button').hide();
+        }
+    }
+
+    function TransferButtonAction()
+    {
+        if (SelectedValues.length <= 0)
+            return;
+
+        ShowProgress();
+
+        var DataForSend = [];
+
+        var Type = $('input[name="transfer-islem"]:checked').val();
+
+        for (var i = 0; i < SelectedValues.length; i++)
+        {
+            var FilteredData = Data.filter(x => x.SERI_NO == SelectedValues[i])[0];
+            var SelectedData = { "TIP": Type, "HAT_KODU": FilteredData.HAT_KODU, "STOK_KODU": FilteredData.STOK_KODU, "SERI_NO": FilteredData.SERI_NO, "MIKTAR": FilteredData.MIKTAR };
+
+            DataForSend.push(SelectedData);
+        }
+
+        console.log(DataForSend);
+
+        $.ajax({
+            url: '@Url.Action("AmbarGir", "Uretim")',
+            type: 'POST',
+            data: { "datalist": DataForSend },
+            error: (error) => {
+                Swal.fire('Başarısız!', `Aktarım işleminde bir sorun oluştu.`, 'error');
+                HideProgress();
+            },
+            success: (response) => {
+                console.log(response);
+                Swal.fire('Başarılı!', ``, 'success');
+            }
+        })
+        .then(() => {
+            SelectedValues = [];
+
+            TransferButtonVisibility();
+            FetchDataFromUrl();
+        });
     }
 </script>
